# personal_language_statistics

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  Pipfile  pyproject.toml  update.py
.cspell/: languages.txt  python_extras.txt  vs_code.txt
data/: analysis.py  fetch_colors.py  fetch_data.py  language_colors.py  repositories_data.py
modules/: analysis.py  language_colors.py  language_colors.yaml  repositories_data.py
