[project]
name = "personal-language-statistics"
version = "0.1.0"
description = "Personal language statistics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.0",
    "pandas==2.3.3",
    "pygithub==2.8.1",
    "pyyaml==6.0.1",
    "requests==2.32.5",
]
